# prompt-storm

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  current_state.md  package-lock.json  prompt_storm.config.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: 01-technical-stack.md  02-litellm.md
examples/: test_optimizer.py
out_dir/business/: email_subject_lines.yaml
out_dir/education/: mesure_du_succes_de_la_formation.yaml
out_dir/finance/: optimiser_budget_projet.yaml
out_dir/marketing/: audience_research_titles.yaml
out_dir/project_planning/: identifier_jalons_projet.yaml
prompt_storm/: __init__.py  cli.py  main.py  optimizer.py  prompt_format.py
prompt_storm/interfaces/: service_interfaces.py
prompt_storm/models/: config.py  responses.py
prompt_storm/services/: batch_optimizer_service.py  csv_service.py  optimizer_service.py  yaml_service.py
prompt_storm/utils/: error_handler.py  logger.py  response_processor.py
tasks/: 00-a-task-template.md  00-project-init.md  02-create-the-main.md  04-prompt-optimizer.md  05-prompt-optimizer-async.md  06-prompt-optimizer-command.md  07-prompt-optimizer-format.md  08-prompt-optimizer-format-verify-yaml.md  08-prompt-optimizer-format.md  09-prompt-optimize-refector.md  10-prompt-optimize-batch.md  11-prompt-optimize-batch-excel.md  12-async.md  12-prompt-remove-async.md  13-prompt-format.md  14-prompt-readme.md  15-architecture-document.md  16-prompt-configure-command.md
tests/: conftest.py  test_cli.py  test_main.py  test_optimizer.py  test_placeholder.py
