[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "prompt-storm"
version = "0.1.0"
description = "A project for prompt engineering and generation"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest"
]
