[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prompt-storm"
version = "0.2.0"
description = "A project for prompt engineering and generation"
authors = ["Your Name <raphael.mansuy@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_storm"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = ">=0.9.0"
rich = ">=10.0.0"
click = ">=8.0.0"
litellm = ">=1.0.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
boto3 = "^1.35.76"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
prompt-storm = "prompt_storm.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=prompt_storm --cov-report=term-missing"
